--- a/imports/ui/not-found.html
+++ b/imports/ui/not-found.html
@@ -1,6 +1,12 @@
 <template name="not-found">
-    <div class="container">
-        <h1 class="has-text-center">404</h1>
-        <h3 class="has-text-centered">Page not found :/</h3>
-    </div>
+    <section class="hero is-large">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+
+                <h1 class="title is-1">404</h1>
+                <h3 class="subtitle is-3">Page not found</h3>
+                <p>Well, that's awkward... The Mexicans building the pages could not find this one.</p>
+            </div>
+        </div>
+    </section>
 </template>
