--- a/imports/ui/rea/albums/gallery.html
+++ b/imports/ui/rea/albums/gallery.html
@@ -83,6 +83,7 @@
                                         {{> Template.dynamic template="rea.albums.remove.button" data=removeButtonData}}
                                     </p>
                                 </div>
+                                <div class="is-clearfix"></div>
                             </div>
                         </div>
                     {{/if}}
@@ -93,16 +94,16 @@
                                 <div class="gallery__item__controls">
                                     <button class="delete is-small js-remove-photo"></button>
                                 </div>
-                                <!--<div class="gallery__item__infos">-->
-                                <!--<p>-->
-                                <!--{{> icon name='thumbs-up' size='is-small'}}-->
-                                <!--<span>0</span>-->
-                                <!--</p>-->
-                                <!--<p>-->
-                                <!--{{> icon name='comments' size='is-small'}}-->
-                                <!--<span>0</span>-->
-                                <!--</p>-->
-                                <!--</div>-->
+                                <div class="gallery__item__infos">
+                                    <p>
+                                        {{> icon name='thumbs-up' size='is-small'}}
+                                        <span>{{likesCount}}</span>
+                                    </p>
+                                    <p>
+                                        {{> icon name='comments' size='is-small'}}
+                                        <span>{{commentsCount}}</span>
+                                    </p>
+                                </div>
                             </div>
                         {{/each}}
                     </div>
